--- a/top/reviewnew/jiaocheng1.html
+++ b/top/reviewnew/jiaocheng1.html
@@ -21,7 +21,16 @@
     </ul>
   </div>
     <div id="main-content">
+    
 
+        第一步：<br />
+        <img src="images/4.jpg" /><br />
+
+        第二步：<br />
+        <img src="images/5.jpg" /><br />
+
+        第三步：<br />
+        <img src="images/6.jpg" /><br />
 
     </div>
 </div>
