--- a/top/reviewnew/jiaocheng2.html
+++ b/top/reviewnew/jiaocheng2.html
@@ -22,7 +22,14 @@
   </div>
     <div id="main-content">
 
+        第一步：<br />
+        <img src="images/1.jpg" /><br />
 
+        第二步：<br />
+        <img src="images/2.jpg" /><br />
+
+        第三步：<br />
+        <img src="images/3.jpg" /><br />
     </div>
 </div>
 
