--- a/top/index.html
+++ b/top/index.html
@@ -73,8 +73,8 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
 
 		<li><span> <a
 		href="http://bang.7fshop.com/UserAddAds.aspx" target="mainframe">我要推广宝贝</a></span></li>
-		<!--<li><span> <a
-		href="http://bang.7fshop.com/AddShopAds.aspx" target="mainframe">我要推广店铺</a></span></li>-->
+		<li><span> <a
+		href="http://bang.7fshop.com/AddShopAds.aspx" target="mainframe">我要推广店铺</a></span></li>
 		<li ><span> <a
 		href="http://bang.7fshop.com/UserAdsList.aspx?istou=1" target="mainframe">投放中的广告
 	</a></span></li>	<li ><span> <a
@@ -82,10 +82,27 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
 	</a></span></li>	<li ><span> <a
 		href="http://www.7fshop.com/top/market/qubie.html" target="mainframe">正式版本如何收费
 	</a></span></li>	<li ><span> <a
-		href="http://www.7fshop.com/top/market/adslist.html" target="mainframe">广告位一览
+		href="http://www.7fshop.com/top/market/vip1.html" target="mainframe">VIP推广介绍及案例
+	</a></span></li>	<li ><span> <a
+		href="http://www.7fshop.com/top/market/vip2.html" target="mainframe">VIP推广如何收费
 	</a></span></li>	
     </ul>
 </div>
+
+
+<div class="menu-box">
+<h3 class="mytaobao-bar"><span> VIP推广 </span>
+<button class="menu-close">-</button>
+</h3>
+<ul class="group">
+	<li ><span> <a
+		href="http://www.7fshop.com/top/market/vip1.html" target="mainframe">VIP推广介绍及案例
+	</a></span></li>	<li ><span> <a
+		href="http://www.7fshop.com/top/market/vip2.html" target="mainframe">VIP推广如何收费
+	</a></span></li>	
+    </ul>
+</div>
+
 
 <div class="menu-box">
 <h3 class="mytaobao-bar"><span> 营销推广 </span>
