--- a/top/index.html
+++ b/top/index.html
@@ -72,6 +72,8 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
 <ul class="group">
 
 		<li><span> <a
+		href="http://www.7fshop.com/top/market/default.aspx" target="mainframe">特推广首页</a></span></li>
+		<li><span> <a
 		href="http://bang.7fshop.com/UserAddAds.aspx" target="mainframe">我要推广宝贝</a></span></li>
 		<li><span> <a
 		href="http://bang.7fshop.com/AddShopAds.aspx" target="mainframe">我要推广店铺</a></span></li>
