--- a/top/indexnew.html
+++ b/top/indexnew.html
@@ -92,6 +92,8 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
 		<li ><span> <a
 		href="http://haoping.7fshop.com/top/reviewnew/reviewlist.aspx" target="mainframe2">好评列表</a></span></li>	
 		<li ><span> <a
+		href="http://haoping.7fshop.com/top/reviewnew/reviewindex.aspx" target="mainframe2">展示中好评</a></span></li>	
+		<li ><span> <a
 		href="http://haoping.7fshop.com/top/reviewnew/kefulist.aspx" target="mainframe2">待审核评价</a></span></li>		
     </ul>
 </div>
