--- a/top/reviewnew/jiaocheng1.html
+++ b/top/reviewnew/jiaocheng1.html
@@ -32,6 +32,15 @@
         第三步：<br />
         <img src="images/6.jpg" /><br />
 
+        第四步：<br />
+        <img src="images/1.jpg" /><br />
+
+        第五步：<br />
+        <img src="images/2.jpg" /><br />
+
+        第六步：<br />
+        <img src="images/3.jpg" /><br />
+
     </div>
 </div>
 
