--- a/top/reviewnew/qubie.html
+++ b/top/reviewnew/qubie.html
@@ -76,6 +76,26 @@
      <td><div align="center">√</div></td>
   </tr>
     <tr>
+    <td height="24"><div align="right">客户关系分组管理</div></td>
+    <td><div align="center">X</div></td>
+     <td><div align="center">√</div></td>
+  </tr>
+    <tr>
+    <td height="24"><div align="right">短信催单</div></td>
+    <td><div align="center">X</div></td>
+     <td><div align="center">√</div></td>
+  </tr>
+    <tr>
+    <td height="24"><div align="right">节假日关怀</div></td>
+    <td><div align="center">X</div></td>
+     <td><div align="center">√</div></td>
+  </tr>
+    <tr>
+    <td height="24"><div align="right">店铺活动促销</div></td>
+    <td><div align="center">X</div></td>
+     <td><div align="center">√</div></td>
+  </tr>
+    <tr>
     <td height="24"><div align="right">CRM客户关系营销</div></td>
     <td><div align="center">X</div></td>
      <td><div align="center">√</div></td>
