--- a/top/reviewnew/qubie.html
+++ b/top/reviewnew/qubie.html
@@ -81,7 +81,7 @@
      <td><div align="center">√</div></td>
   </tr>
     <tr>
-    <td height="24"><div align="right">短信催单</div></td>
+    <td height="24"><div align="right">未付款催单</div></td>
     <td><div align="center">X</div></td>
      <td><div align="center">√</div></td>
   </tr>
@@ -92,11 +92,6 @@
   </tr>
     <tr>
     <td height="24"><div align="right">店铺活动促销</div></td>
-    <td><div align="center">X</div></td>
-     <td><div align="center">√</div></td>
-  </tr>
-    <tr>
-    <td height="24"><div align="right">CRM客户关系营销</div></td>
     <td><div align="center">X</div></td>
      <td><div align="center">√</div></td>
   </tr>
