--- a/top/market/vip2.html
+++ b/top/market/vip2.html
@@ -77,17 +77,17 @@
   </tr>
   <tr>
     <td height="24"><div align="right">新增流量(平均值)</div></td>
-    <td><div align="center">-</div></td>
     <td><div align="center">8000点击/月</div></td>
     <td><div align="center">16000点击/月</div></td>
     <td><div align="center">40000点击/月</div></td>
+    <td><div align="center">-</div></td>
   </tr>
     <tr>
     <td height="24"><div align="right">包月入口</div></td>
     <td><div align="center"><a href="http://fuwu.taobao.com/item/subsc.htm?items=service-0-22762-4:1;">包月付费</a></div></td>
      <td><div align="center"><a href="http://fuwu.taobao.com/item/subsc.htm?items=service-0-22762-5:1;">包月付费</a></div></td>
     <td><div align="center"><a href="http://fuwu.taobao.com/item/subsc.htm?items=service-0-22762-7:1;">包月付费</a></div></td>
-     <td><div align="center"><a href="http://fuwu.taobao.com/item/subsc.htm?items=service-0-22762-12:1;">包月付费</a></div></td>
+     <td><div align="center"><a href="http://fuwu.taobao.com/item/subsc.htm?items=service-0-22762-12:1;">付费</a></div></td>
   </tr>
 </table>
 <br>
