--- a/top/index.html
+++ b/top/index.html
@@ -81,7 +81,10 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
 		href="http://bang.7fshop.com/UserAdsList.aspx?istou=1" target="mainframe">投放中的广告
 	</a></span></li>	<li ><span> <a
 		href="http://bang.7fshop.com/UserAdsList.aspx" target="mainframe">未投放的广告
-	</a></span></li>	<li ><span> <a
+	</a></span></li>  <li ><span> <a
+		href="http://bang.7fshop.com/UpdateGoods.aspx" target="mainframe">更新宝贝信息
+	</a></span></li>
+		<li ><span> <a
 		href="http://www.7fshop.com/top/market/qubie.html" target="mainframe">正式版本如何收费
 	</a></span></li>	<li ><span> <a
 		href="http://www.7fshop.com/top/market/vip1.html" target="mainframe">VIP推广介绍及案例
