--- a/top/indexnew.html
+++ b/top/indexnew.html
@@ -81,7 +81,9 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
 		href="http://haoping.7fshop.com/top/reviewnew/setting.aspx" target="mainframe2">基本设置</a></span></li>
 		<li><span> <a
 		href="http://haoping.7fshop.com/top/reviewnew/html.aspx" target="mainframe2">活动展示</a></span></li>	
-	</ul>
+		<li><span> <a
+		href="http://haoping.7fshop.com/top/reviewnew/tuijianlist.aspx" target="mainframe2" style="color:Red; font-weight:bold;">推荐好友送短信</a></span></li>	
+    </ul>
 </div>
 
 <div class="menu-box">
