--- a/top/indexnew.html
+++ b/top/indexnew.html
@@ -11,7 +11,7 @@
 <body>
 
 <div id="page">
-
+<div style="color:Red; font-weight:bold;">【公告】：好评有礼将于7月21日0点到8点进行服务器升级，升级时间内所有功能将无法使用，给您带来的不变我们深表抱歉！</div>
 <!--头部登录信息-->
 <div id="header">
     <div id="site-nav" style="margin-bottom:5px;">
