--- a/top/indexnew.html
+++ b/top/indexnew.html
@@ -33,7 +33,7 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
     </div>
     
     <div style="width:928px;">
-        <div style="color:Red; font-weight:bold;">【公告】：好评有礼将于7月21日0点到8点进行服务器升级，升级时间内所有功能将无法使用，给您带来的不变我们深表抱歉！</div>
+        <div style="color:Red; font-weight:bold;">【公告】：好评有礼将于7月21日0点到8点进行服务器升级，升级时间内所有功能将无法使用，给您带来的不便我们深表抱歉！</div>
     <img src='reviewnew/images/banner4yue.jpg' border='0' /></div>
 
 <div id="content1">
