--- a/top/DataAnalysis/YXBangTui.Web/index.html
+++ b/top/DataAnalysis/YXBangTui.Web/index.html
@@ -102,7 +102,7 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
         <div style="width:780px; margin-left:10px; float:left; height:1220px;">
                 <iframe style="overflow:scroll; width: 100%; height:1220px; padding:0px;" 
 
-name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx" frameborder="0" scrolling="no"></iframe>
+name="mainframe" src="http://www.7fshop.com/top/market/default.aspx" frameborder="0" scrolling="no"></iframe>
         </div>
     </div>
 </div>
