--- a/top/DataAnalysis/YXBangTui.Web/index.html
+++ b/top/DataAnalysis/YXBangTui.Web/index.html
@@ -69,7 +69,7 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
 <ul class="group">
 
 		<li><span> <a
-		href="http://www.7fshop.com/top/market/default.aspx" target="mainframe">特推广首页</a></span></li>
+		href="/default.aspx" target="mainframe">特推广首页</a></span></li>
 		<li><span> <a
 		href="/UserAddAds.aspx" target="mainframe">我要推广宝贝</a></span></li>
 		<li><span> <a
