--- a/top/DataAnalysis/YXBangTui.Web/index.html
+++ b/top/DataAnalysis/YXBangTui.Web/index.html
@@ -82,11 +82,11 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
 		href="/UpdateGoods.aspx" target="mainframe">更新宝贝信息
 	</a></span></li>
 		<li ><span> <a
-		href="http://www.7fshop.com/top/market/qubie.html" target="mainframe">正式版本如何收费
+		href="/qubie.html" target="mainframe">正式版本如何收费
 	</a></span></li>	<li ><span> <a
 		href="http://www.7fshop.com/top/market/vip1.html" target="mainframe">VIP推广介绍及案例
 	</a></span></li>	<li ><span> <a
-		href="http://www.7fshop.com/top/market/vip2.html" target="mainframe">VIP推广如何收费
+		href="/vip2.html" target="mainframe">VIP推广如何收费
 	</a></span></li>	
     </ul>
 </div>
