--- a/top/indexnew.html
+++ b/top/indexnew.html
@@ -43,7 +43,7 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=美杜莎之
     <img alt="特特营销推广专家" src="images/logo.png" width="150" height="40" />
 </div>
 <ul class="tabHead" id="tabCot_product-li-currentBtn-" style="float:left; width:600px; margin-top:10px;">
-   <li class="noTab"><a href="http://fuwu.taobao.com/serv/detail.htm?service_id=764&f=haoping" target="_blank" title="营销推广">营销推广</a></li>
+   <li class="noTab"><a href="http://fuwu.taobao.com/ser/detail.htm?service_code=ts-22655&f=haoping" target="_blank" title="营销推广">营销推广</a></li>
    <li class="noTab"><a href="http://fuwu.taobao.com/serv/detail.htm?service_id=11807&f=haoping" target="_blank" title="团购营销">团购营销</a></li>
    <li class="currentBtn"><a href="javascript:void(0)" title="好评有礼" rel="3">好评有礼</a></li>
    <li><a href="javascript:void(0)" title="客户关系营销" rel="4">客户关系营销</a></li>
