--- a/top/DataAnalysis/YXBangTui.Web/index.html
+++ b/top/DataAnalysis/YXBangTui.Web/index.html
@@ -22,7 +22,7 @@ src="js_userinfo.aspx"></script>
             在线客服：
             <a target="_blank" href="http://amos.im.alisoft.com/msg.aw?v=2&uid=%E7%BE%8E%
 E6%9D%9C%E8%8E%8E%E4%B9%8B%E5%BF%83&site=cntaobao&s=1&charset=utf-8" ><img border="0" 
-align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=曉瑶1006&site=cntaobao&s=1&charset=utf-8" alt="有问题请点这里" /></a>
+align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=特推广&site=cntaobao&s=1&charset=utf-8" alt="有问题请点这里" /></a>
             <a href='http://bangpai.taobao.com/group/1091516.htm' target="_blank">更多教程和
 问题咨询请到官方论坛，谢谢您的支持</a>
         </p>
