--- a/top/indexnew.html
+++ b/top/indexnew.html
@@ -81,6 +81,8 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=美杜莎之
 		href="http://haoping.7fshop.com/top/reviewnew/html.aspx" target="mainframe2">活动展示</a></span></li>	
 		<li><span> <a
 		href="http://haoping.7fshop.com/top/reviewnew/tuijianlist.aspx" target="mainframe2" style="color:Red; font-weight:bold;">推荐好友送短信</a></span></li>	
+		<li><span> <a
+		href="http://haoping.7fshop.com/top/reviewnew/fenxiang.aspx" target="mainframe2" style="color:Red; font-weight:bold;">分享服务送短信</a></span></li>	
     </ul>
 </div>
 
