--- a/top/DataAnalysis/YXBangTui.Web/index.html
+++ b/top/DataAnalysis/YXBangTui.Web/index.html
@@ -43,7 +43,7 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=特推广&si
 <ul class="tabHead" id="tabCot_product-li-currentBtn-" style="float:left; width:700px; margin-top:10px;">
    <li id="tab1"><a href="javascript:void(0)" title="营销推广" rel="1">营销推广</a></li>
    <li id="tab2"><a href="http://fuwu.taobao.com/serv/detail.htm?service_id=11807" target="_blank" title="社区">团购营销</a></li>
-   <li id="tab3"><a href="http://fuwu.taobao.com/service/service.htm?service_id=4545" target="_blank" title="社区">好评有礼</a></li>
+   <li id="tab3"><a href="#" target="_blank" title="社区">好评有礼</a></li>
    <li id="tab4" style='height:25px;'><a href="http://fuwu.taobao.com/serv/detail.htm?service_id=24224" target="_blank" title="社区">客服绩效</a>
    <img src='css/new.gif' style="position:relative; left:58px; top:-38px;" />
    </li>
