--- a/top/DataAnalysis/YXBangTui.Web/qubie.html
+++ b/top/DataAnalysis/YXBangTui.Web/qubie.html
@@ -29,7 +29,7 @@
  
 <tr>
 <td width="100%"  align="left">
-&nbsp;&nbsp;&nbsp;&nbsp;<img src="http://a.tbcdn.cn/sys/wangwang/smiley/48x48/68.gif" /> <span style="font-size:14px;">尊敬的淘宝卖家，由于帮推广在帮您做店铺推广的时候，需要用到大量的服务器资源，为了让每个用户都能更好的使用帮推广，现将用户分为以下几个版本：</span><br><br>
+&nbsp;&nbsp;&nbsp;&nbsp;<img src="http://a.tbcdn.cn/sys/wangwang/smiley/48x48/68.gif" /> <span style="font-size:14px;">尊敬的淘宝卖家，由于特推广在帮您做店铺推广的时候，需要用到大量的服务器资源，为了让每个用户都能更好的使用特推广，现将用户分为以下几个版本：</span><br><br>
 &nbsp;&nbsp;&nbsp;&nbsp;<strong>优质广告位4个</strong>：一个月[28.00元]    一个季度[78.00元]    半年[148.00元]    一年[288.00元] <br>
 &nbsp;&nbsp;&nbsp;&nbsp;<strong>优质广告位8个</strong>：一个月[48.00元]    一个季度[138.00元]    半年[268.00元]    一年[518.00元] <br>
 &nbsp;&nbsp;&nbsp;&nbsp;<strong>优质广告位16个</strong>：一个月[88.00元]    一个季度[258.00元]    半年[508.00元]    一年[998.00元] <br>
