--- a/top/indexnew.html
+++ b/top/indexnew.html
@@ -31,8 +31,7 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=美杜莎之
     </div>
     
     <div style="width:928px;">
-       <div style="color:Red; font-weight:bold; font-size:22px;">【公告】：好评有礼将于7月21日0点到8点进行服务器升级，升级时间内所有功能将无法使用，给您带来的不便我们深表抱歉！</div>
-    <img src='reviewnew/images/banner4yue.jpg' border='0' style="display:none" /></div>
+    <img src='reviewnew/images/banner4yue.jpg' border='0'  /></div>
 
 <div id="content1">
 
