--- a/top/DataAnalysis/YXBangTui.Web/index.html
+++ b/top/DataAnalysis/YXBangTui.Web/index.html
@@ -80,11 +80,11 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=特推广&si
 		href="/UpdateGoods.aspx" target="mainframe">更新宝贝信息
 	</a></span></li>
 		<li ><span> <a
-		href="/qubie.html" target="mainframe">正式版本如何收费
+		href="/qubie.html" target="mainframe">优质广告收费说明
 	</a></span></li>	<li ><span> <a
-		href="http://www.7fshop.com/top/market/vip1.html" target="mainframe">VIP推广介绍及案例
+		href="/vip.html" target="mainframe">VIP经典案例
 	</a></span></li>	<li ><span> <a
-		href="/vip2.html" target="mainframe">VIP推广如何收费
+		href="/vip2.html" target="mainframe">VIP广告说明
 	</a></span></li>	
     </ul>
 </div>
