--- a/top/DataAnalysis/YXBangTui.Web/index.html
+++ b/top/DataAnalysis/YXBangTui.Web/index.html
@@ -82,7 +82,7 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=特推广&si
 		<li ><span> <a
 		href="/qubie.html" target="mainframe">优质广告收费说明
 	</a></span></li>	<li ><span> <a
-		href="/vip.html" target="mainframe">VIP经典案例
+		href="/vip.htm" target="mainframe">VIP经典案例
 	</a></span></li>	<li ><span> <a
 		href="/vip2.html" target="mainframe">VIP广告说明
 	</a></span></li>	
