--- a/top/DataAnalysis/YXBangTui.Web/vip.htm
+++ b/top/DataAnalysis/YXBangTui.Web/vip.htm
@@ -5,6 +5,6 @@
     <title>VIP经典案例</title>
 </head>
 <body>
-    <img src="adsimg/vip.jpg" />
+    <img src="adsimg/vip.jpg" width="760px" />
 </body>
 </html>
