--- a/top/DataAnalysis/YXBangTui.Web/vip.htm
+++ b/top/DataAnalysis/YXBangTui.Web/vip.htm
@@ -3,8 +3,27 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>VIP经典案例</title>
+    <link href="css/common.css" rel="stylesheet" />
 </head>
-<body>
+<body style="padding:0px; margin:0px;">
+
+<div class="navigation" style="height:600px;">
+
+  <div class="crumbs"><a href="#" class="nolink">特推广</a> VIP经典案例 </div>
+  <div class="absright">
+    <ul>
+      <li>
+        <div class="msg">
+            
+        </div>
+      </li>
+    </ul>
+  </div>
+
+    <div id="main-content">
+
     <img src="adsimg/vip.jpg" width="760px" />
+    </div>
+    </div>
 </body>
 </html>
