--- a/top/DataAnalysis/YXBangTui.Web/index.html
+++ b/top/DataAnalysis/YXBangTui.Web/index.html
@@ -22,14 +22,9 @@ src="js_userinfo.aspx"></script>
             在线客服：
             <a target="_blank" href="http://amos.im.alisoft.com/msg.aw?v=2&uid=特推广&site=cntaobao&s=1&charset=utf-8" ><img border="0" 
 align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=特推广&site=cntaobao&s=1&charset=utf-8" alt="有问题请点这里" /></a>
-            <a href='http://bangpai.taobao.com/group/1091516.htm' target="_blank">更多教程和
-问题咨询请到官方论坛，谢谢您的支持</a>
+            <a href='http://www.taobao.com/' target="_blank">退出</a>
         </p>
-        <ul class="quick-menu">
-            <li>
-                <a href="http://bangpai.taobao.com/group/1091516.htm" target="_blank">帮助中心</a>
-            </li>       
-        </ul>
+        
     </div>
 
 
@@ -43,11 +38,10 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=特推广&si
 <ul class="tabHead" id="tabCot_product-li-currentBtn-" style="float:left; width:700px; margin-top:10px;">
    <li id="tab1"><a href="javascript:void(0)" title="营销推广" rel="1">营销推广</a></li>
    <li id="tab2"><a href="http://fuwu.taobao.com/serv/detail.htm?service_id=11807" target="_blank" title="社区">团购营销</a></li>
-   <li id="tab3"><a href="#" target="_blank" title="社区">好评有礼</a></li>
+   <li id="tab3"><a href="http://fuwu.taobao.com/ser/detail.htm?service_id=4545&from=tetui" target="_blank" title="社区">好评有礼</a></li>
    <li id="tab4" style='height:25px;'><a href="http://fuwu.taobao.com/serv/detail.htm?service_id=24224" target="_blank" title="社区">客服绩效</a>
    <img src='css/new.gif' style="position:relative; left:58px; top:-38px;" />
    </li>
-   <li><a href="http://bangpai.taobao.com/group/1091516.htm" target="_blank" title="社区">社区</a></li>
 </ul>
 </div>
 
