--- a/top/DataAnalysis/YXBangTui.Web/index.html
+++ b/top/DataAnalysis/YXBangTui.Web/index.html
@@ -22,7 +22,7 @@ src="js_userinfo.aspx"></script>
             在线客服：
             <a target="_blank" href="http://amos.im.alisoft.com/msg.aw?v=2&uid=特推广&site=cntaobao&s=1&charset=utf-8" ><img border="0" 
 align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=特推广&site=cntaobao&s=1&charset=utf-8" alt="有问题请点这里" /></a>
-            <a href='http://www.taobao.com/' target="_blank">退出</a>
+          您好，欢迎来到特推广  <a href='http://www.taobao.com/' target="_blank">退出</a>
         </p>
         
     </div>
