--- a/top/indexnew.html
+++ b/top/indexnew.html
@@ -111,7 +111,9 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=美杜莎之
 		<li ><span> <a
 		href="http://haoping.7fshop.com/top/reviewnew/msglist.aspx" target="mainframe2">短信发送记录</a></span></li>		
 		<li ><span> <a
-		href="http://haoping.7fshop.com/top/reviewnew/msgbuy.aspx" target="mainframe2">购买短信</a></span></li>	
+		href="http://haoping.7fshop.com/top/reviewnew/msgbuy.aspx" target="mainframe2">购买短信</a></span></li>		
+		<li ><span> <a
+		href="http://haoping.7fshop.com/top/reviewnew/msgaddlist.aspx" target="mainframe2">短信充值记录</a></span></li>	
 	</ul>
 </div>
 
