--- a/Soft/dedecms/taobao1/head.htm
+++ b/Soft/dedecms/taobao1/head.htm
@@ -1,5 +1,5 @@
 <div id="top">
-  <div id="logo"><img src="images/logo.jpg" /></div>
+  <div id="logo"><img src="templets/taobao1/images/logo.jpg" /></div>
   <div id="toplink"><a href="http://www.dgw.cc" target="_blank">导购网</a>|
 <a href="http://www.fchan.cn" target="_blank">房产</a>|
 <a href="http://www.bkqq.cn" target="_blank">女人圈</a>|
