--- a/Soft/dedecms/taobao1/head.htm
+++ b/Soft/dedecms/taobao1/head.htm
@@ -1,20 +1,17 @@
 <div id="top">
   <div id="logo"><img src="templets/taobao1/images/logo.jpg" /></div>
-  <div id="toplink"><a href="http://www.dgw.cc" target="_blank">导购网</a>|
-<a href="http://www.fchan.cn" target="_blank">房产</a>|
-<a href="http://www.bkqq.cn" target="_blank">女人圈</a>|
-<a href="http://www.fjfood.net" target="_blank">食品</a>|
-<a href="http://www.2251.cn" target="_blank">查询</a>|
-<a href="http://www.txtcc.CN" target="_blank">家居时尚</a></div>
+  <div id="toplink">
+<a href="http://www.chihuotianxia.com" target="_blank">吃货天下</a>|
+<a href="http://www.mengmeng8.com" target="_blank">萌萌吧</a></div>
  <ul class="topmenu">
-  <li class="topmenu1"><a href="news.htm">首页</a></li>
-  <li class="topmenu2"><a href="http://www.dgw.cc/index-city.html" target="_blank">导购网</a></li>
-  <li class="topmenu2"><a href="http://www.2567.cn" target="_blank">男人邦</a></li>
-  <li class="topmenu2"><a href="http://www.qzfc.cn" target="_blank">房产</a></li>
-  <li class="topmenu2"><a href="http://www.txtcc.cn" target="_blank">家居</a></li>
-  <li class="topmenu2"><a href="http://qinzi.dgw.cc" target="_blank">亲子</a></li>
+  <li class="topmenu1"><a href="index.html">首页</a></li>
+  <li class="topmenu2"><a href="http://www.go12go.com" target="_blank">导购网</a></li>
+  <li class="topmenu2"><a href="http://www.niubibang.com" target="_blank">男人邦</a></li>
+  <li class="topmenu2"><a href="http://www.hi859.com" target="_blank">房产</a></li>
+  <li class="topmenu2"><a href="http://www.5izhuangxiu.com" target="_blank">家居</a></li>
+  <li class="topmenu2"><a href="http://www.ianglebaby.com" target="_blank">亲子</a></li>
   </ul>
-  <div id="topnotice"><marquee direction="left" scrollamount="2"><a href="http://www.bkqq.com.cn/ad.html">广告价格及广告牌分布</a></marquee></div>
+  <div id="topnotice"><marquee direction="left" scrollamount="2"></marquee></div>
 </div>
 
 <div id="topsearch">
@@ -24,10 +21,10 @@
 <div class="topsearch2"><input name="keyword" type="text" style="width:300px; border:0px; height:22px" /></div>
 <div class="topsearch2"><input type="submit" id="btnsearch" value="搜索" /></div>
 </form>
-<div id="topsearch3">热搜：<a href="newsSrarch.php?Srarch=春季搭配" target="_blank">春季搭配</a> 
-<a href="newsSrarch.php?Srarch=牛仔裤" target="_blank">牛仔裤</a> 
-<a href="newsSrarch.php?Srarch=画眼妆" target="_blank">画眼妆</a> 
-<a href="newsSrarch.php?Srarch=明星搭配" target="_blank">明星搭配</a>
-<a href="newsSrarch.php?Srarch=凉鞋" target="_blank">凉鞋</a>
-<a href="newsSrarch.php?Srarch=泳装" target="_blank">泳装</a></div>
+<div id="topsearch3">热搜：<a href="plus/search.php?Srarch=春季搭配" target="_blank">春季搭配</a> 
+<a href="plus/search.php?Srarch=牛仔裤" target="_blank">牛仔裤</a> 
+<a href="plus/search.php?Srarch=画眼妆" target="_blank">画眼妆</a> 
+<a href="plus/search.php?Srarch=明星搭配" target="_blank">明星搭配</a>
+<a href="plus/search.php?Srarch=凉鞋" target="_blank">凉鞋</a>
+<a href="plus/search.php?Srarch=泳装" target="_blank">泳装</a></div>
 </div>
