--- a/Soft/dedecms/taobao1/head.htm
+++ b/Soft/dedecms/taobao1/head.htm
@@ -1,30 +1,30 @@
-<div id="top">
+ï»¿<div id="top">
   <div id="logo"><img src="templets/taobao1/images/logo.jpg" /></div>
   <div id="toplink">
-<a href="http://www.chihuotianxia.com" target="_blank">³Ô»õÌìÏÂ</a>|
-<a href="http://www.mengmeng8.com" target="_blank">ÃÈÃÈ°É</a></div>
+<a href="http://www.chihuotianxia.com" target="_blank">åƒè´§å¤©ä¸‹</a>|
+<a href="http://www.mengmeng8.com" target="_blank">èŒèŒå§</a></div>
  <ul class="topmenu">
-  <li class="topmenu1"><a href="index.html">Ê×Ò³</a></li>
-  <li class="topmenu2"><a href="http://www.go12go.com" target="_blank">µ¼¹ºÍø</a></li>
-  <li class="topmenu2"><a href="http://www.niubibang.com" target="_blank">ÄÐÈË°î</a></li>
-  <li class="topmenu2"><a href="http://www.hi859.com" target="_blank">·¿²ú</a></li>
-  <li class="topmenu2"><a href="http://www.5izhuangxiu.com" target="_blank">¼Ò¾Ó</a></li>
-  <li class="topmenu2"><a href="http://www.ianglebaby.com" target="_blank">Ç××Ó</a></li>
+  <li class="topmenu1"><a href="index.html">é¦–é¡µ</a></li>
+  <li class="topmenu2"><a href="http://www.go12go.com" target="_blank">å¯¼è´­ç½‘</a></li>
+  <li class="topmenu2"><a href="http://www.niubibang.com" target="_blank">ç”·äººé‚¦</a></li>
+  <li class="topmenu2"><a href="http://www.hi859.com" target="_blank">æˆ¿äº§</a></li>
+  <li class="topmenu2"><a href="http://www.5izhuangxiu.com" target="_blank">å®¶å±…</a></li>
+  <li class="topmenu2"><a href="http://www.ianglebaby.com" target="_blank">äº²å­</a></li>
   </ul>
   <div id="topnotice"><marquee direction="left" scrollamount="2"></marquee></div>
 </div>
 
 <div id="topsearch">
-<div id="topsearch1">ÐÂÎÅËÑË÷£º</div>
+<div id="topsearch1">æ–°é—»æœç´¢ï¼š</div>
 <form action="plus/search.php" method="get">
 <input type="hidden" id="searchtype" value="titlekeyword" />
 <div class="topsearch2"><input name="keyword" type="text" style="width:300px; border:0px; height:22px" /></div>
-<div class="topsearch2"><input type="submit" id="btnsearch" value="ËÑË÷" /></div>
+<div class="topsearch2"><input type="submit" id="btnsearch" value="æœç´¢" /></div>
 </form>
-<div id="topsearch3">ÈÈËÑ£º<a href="plus/search.php?Srarch=´º¼¾´îÅä" target="_blank">´º¼¾´îÅä</a> 
-<a href="plus/search.php?Srarch=Å£×Ð¿ã" target="_blank">Å£×Ð¿ã</a> 
-<a href="plus/search.php?Srarch=»­ÑÛ×±" target="_blank">»­ÑÛ×±</a> 
-<a href="plus/search.php?Srarch=Ã÷ÐÇ´îÅä" target="_blank">Ã÷ÐÇ´îÅä</a>
-<a href="plus/search.php?Srarch=Á¹Ð¬" target="_blank">Á¹Ð¬</a>
-<a href="plus/search.php?Srarch=Ó¾×°" target="_blank">Ó¾×°</a></div>
+<div id="topsearch3">çƒ­æœï¼š<a href="plus/search.php?Srarch=æ˜¥å­£æ­é…" target="_blank">æ˜¥å­£æ­é…</a> 
+<a href="plus/search.php?Srarch=ç‰›ä»”è£¤" target="_blank">ç‰›ä»”è£¤</a> 
+<a href="plus/search.php?Srarch=ç”»çœ¼å¦†" target="_blank">ç”»çœ¼å¦†</a> 
+<a href="plus/search.php?Srarch=æ˜Žæ˜Ÿæ­é…" target="_blank">æ˜Žæ˜Ÿæ­é…</a>
+<a href="plus/search.php?Srarch=å‡‰éž‹" target="_blank">å‡‰éž‹</a>
+<a href="plus/search.php?Srarch=æ³³è£…" target="_blank">æ³³è£…</a></div>
 </div>
