--- a/Soft/dedecms/taobao1/foot.htm
+++ b/Soft/dedecms/taobao1/foot.htm
@@ -2,57 +2,14 @@
 <div id="linktitle">友情链接</div>
 <div id="linkbody">
 <ul>
-<li><a href="http://sh.dgw.cc/" target="_blank">上海</a></li>
-<li><a href="http://bj.dgw.cc/" target="_blank">北京</a></li>
-<li><a href="http://gz.dgw.cc/" target="_blank">广州</a></li>
-<li><a href="http://sz.dgw.cc/" target="_blank">深圳</a></li>
-<li><a href="http://tj.dgw.cc/" target="_blank">天津</a></li>
-<li><a href="http://suzhou.dgw.cc/" target="_blank">苏州</a></li>
-<li><a href="http://cq.dgw.cc" target="_blank">重庆</a></li>
-<li><a href="http://hz.dgw.cc/" target="_blank">杭州</a></li>
-<li><a href="http://wx.dgw.cc" target="_blank">无锡</a></li>
-<li><a href="http://qd.dgw.cc/" target="_blank">青岛</a></li>
-<li><a href="http://fs.dgw.cc/" target="_blank">佛山</a></li>
-<li><a href="http://cd.dgw.cc" target="_blank">成都</a></li>
-<li><a href="http://wh.dgw.cc" target="_blank">武汉</a></li>
-<li><a href="http://dl.dgw.cc" target="_blank">大连</a></li>
-<li><a href="http://sy.dgw.cc" target="_blank">沈阳</a></li>
-<li><a href="http://nj.dgw.cc/" target="_blank">南京</a></li>
-<li><a href="http://nb.dgw.cc" target="_blank">宁波</a></li>
-<li><a href="http://ts.dgw.cc" target="_blank">唐山</a></li>
-<li><a href="http://dg.dgw.cc" target="_blank">东莞</a></li>
-<li><a href="http://cs.dgw.cc" target="_blank">长沙</a></li>
-<li><a href="http://yt.dgw.cc" target="_blank">烟台</a></li>
-<li><a href="http://jn.dgw.cc" target="_blank">济南</a></li>
-<li><a href="http://heb.dgw.cc" target="_blank">哈尔滨</a></li>
-<li><a href="http://zz.dgw.cc" target="_blank">郑州</a></li>
-<li><a href="http://qz.dgw.cc" target="_blank">泉州</a></li>
-<li><a href="http://cc.dgw.cc" target="_blank">长春</a></li>
-<li><a href="http://nt.dgw.cc" target="_blank">南通</a></li>
-<li><a href="http://wf.dgw.cc" target="_blank">潍坊</a></li>
-<li><a href="http://xa.dgw.cc" target="_blank">西安</a></li>
-<li><a href="http://wz.dgw.cc" target="_blank">温州</a></li>
-<li><a href="http://fz.dgw.cc" target="_blank">福州</a></li>
-<li><a href="http://cz.dgw.cc" target="_blank">常州</a></li>
-<li><a href="http://zb.dgw.cc" target="_blank">淄博</a></li>
-<li><a href="http://xz.dgw.cc" target="_blank">徐州</a></li>
-<li><a href="http://sx.dgw.cc" target="_blank">绍兴</a></li>
-<li><a href="http://jining.dgw.cc" target="_blank">济宁</a></li>
-<li><a href="http://tz.dgw.cc" target="_blank">台州</a></li>
-<li><a href="http://weihai.dgw.cc" target="_blank">威海</a></li>
-<li><a href="http://yz.dgw.cc" target="_blank">扬州</a></li>
-<li><a href="http://nc.dgw.cc/" target="_blank">南昌</a></li>
-<li><a href="http://ty.dgw.cc" target="_blank">太原</a></li>
-<li><a href="http://jl.dgw.cc" target="_blank">吉林</a></li>
-<li><a href="http://zhanjiang.dgw.cc" target="_blank">湛江</a></li>
-<li><a href="http://zh.dgw.cc" target="_blank">珠海</a></li>
-<li><a href="http://sanya.dgw.cc" target="_blank">三亚</a></li>
-<li><a href="http://sjz.dgw.cc" target="_blank">石家庄</a></li>
+
+{dede:flinktype type="dedecms"}
+    <li><a href="[field:typelink/]" target="_blank">[field:typename/]</a></li>
+{/dede:flinktype}
+
 </ul>
 </div>
 </div>
 <div id="foot">
-<a href="http://www.bkqq.com.cn/ad.html">广告服务</a>  <a href="#">联系我们</a> <a href="http://www.dgw.cc/city.php">网站地图</a> <a href="#">版权说明</a> <font color="#061A9F"><strong>广告合作:QQ:5663609</strong></font><br>
-<a href="http://www.dgw.cc/">城市导购网</a> | <a href="http://www.fchan.cn/">城市房产网</a> | <a href="http://www.086jobs.com">人才网</a> | <a href="http://www.fjfood.net">福建食品网</a> | <a href="http://www.jian-cai.cn">中国建材网</a> | <a href="http://www.2251.cn">2251查询</a> | <a href="http://www.bkqq.cn">必看圈圈</a><br>
-Copyright &copy; 2010-2011 www.bkqq.com.cn 版权所有 ICP证：<A href="http://www.miibeian.gov.cn/" target="_blank">闽ICP备09003061号-1</A>
+Copyright &copy; 2010-2012 www.fenseshenghuo.com 版权所有 ICP证：<A href="http://www.miibeian.gov.cn/" target="_blank">闽ICP备09003061号-1</A>
 </div>
