--- a/Soft/dedecms/taobao1/foot.htm
+++ b/Soft/dedecms/taobao1/foot.htm
@@ -4,7 +4,7 @@
 <ul>
 
 {dede:flinktype type="dedecms"}
-    <li><a href="[field:typelink/]" target="_blank">[field:typename/]</a></li>
+    <li>{dede:flink/}</li>
 {/dede:flinktype}
 
 </ul>
