--- a/Soft/dedecms/taobao1/foot.htm
+++ b/Soft/dedecms/taobao1/foot.htm
@@ -3,9 +3,7 @@
 <div id="linkbody">
 <ul>
 
-{dede:flinktype type="dedecms"}
-    <li>{dede:flink/}</li>
-{/dede:flinktype}
+{dede:flink/}
 
 </ul>
 </div>
