--- a/Soft/dedecms/taobao1/index.htm
+++ b/Soft/dedecms/taobao1/index.htm
@@ -71,7 +71,9 @@
         <script>document.write(new Date().toLocaleDateString()+' 星期'+'日一二三四五六'.charAt (new Date().getDay()))</script>
         <span id="time"></span>&nbsp;&nbsp;</div>
             <div class="indjrywbody">
-        <h3><a href="newShow_9629.htm"><font color="#f2650d">15款冬季美包 追逐时尚潮流</font></a></h3>
+      {dede:arclist typeid='25' flag='c' subday='3' titlelen=15 row=1}
+        <h3><a href="[field:arcurl/]" target="_blank"><font color="#f2650d">[field:title/]</font></a></h3>
+      {/dede:arclist}
         <ul>
                     <li>[<a href="newShow_9196.htm">复古潮包 打造迷人</a>]</li>
                     <li>[<a href="newShow_8963.htm">出色婚鞋 让你做完</a>]</li>
