--- a/Soft/dedecms/taobao1/index.htm
+++ b/Soft/dedecms/taobao1/index.htm
@@ -71,7 +71,7 @@
         <script>document.write(new Date().toLocaleDateString()+' 星期'+'日一二三四五六'.charAt (new Date().getDay()))</script>
         <span id="time"></span>&nbsp;&nbsp;</div>
             <div class="indjrywbody">
-      {dede:arclist typeid='25' flag='c' titlelen=15 row=1}
+      {dede:arclist typeid='25' titlelen=15 row=2}
         <h3><a href="[field:arcurl/]" target="_blank"><font color="#f2650d">[field:title/]</font></a></h3>
       {/dede:arclist}
         <ul>
