--- a/Soft/dedecms/taobao1/article_article.htm
+++ b/Soft/dedecms/taobao1/article_article.htm
@@ -70,36 +70,28 @@ alimama_height=90;
 </script>
 <script src="http://a.alimama.cn/inf.js" type="text/javascript"></script></div>
 <div class="newshow">
-<div class="newshowlj"><b>您当前的位置：</b>服饰频道>鞋包流行</div>
+<div class="newshowlj"><b>您当前的位置：</b> {dede:field name='position'/} </div>
 <div class="newshowbody">
-<h2>15款冬季美包 追逐时尚潮流</h2>
-<span>日期：2011-11-22 作者：女人频道 来源：女性时尚资讯 人气：9759</span>
+<h2>{dede:field.title/}</h2>
+<span>日期：{dede:field.pubdate function="MyDate('Y-m-d H:i',@me)"/} 作者：{dede:field.source/} 来源：{dede:field.writer/} 人气：<script src="{dede:field name='phpurl'/}/count.php?view=yes&aid={dede:field name='id'/}&mid={dede:field name='mid'/}" type='text/javascript' language="javascript"></script></span>
 <div class="showbody">
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tr>
-    <td><p>　　冬季新款包包，采用昂贵的面料，奢华的装饰，让包包充满贵气，彰显档次！适合不同的人，不同场合，在这里，你总能找到自己的心头好！</p>
-<p style="TEXT-ALIGN: center"><a href="/newShow_9629_2.htm" title='' ><img alt="15款冬季美包 追逐时尚潮流" src="http://www.5844.cn/upload/fuSi201106/2011112015215867.jpg" /></a></p>
-<p style="TEXT-ALIGN: center">15款冬季美包 追逐时尚潮流</p>
-<p style="TEXT-ALIGN: center"><a href="/newShow_9629_2.htm" title='' ><img alt="15款冬季美包 追逐时尚潮流" src="http://www.5844.cn/upload/fuSi201106/2011112015215868.jpg" /></a></p>
-<p style="TEXT-ALIGN: center">15款冬季美包 追逐时尚潮流</p>
-<p style="TEXT-ALIGN: center"><a href="/newShow_9629_2.htm" title='' ><img alt="15款冬季美包 追逐时尚潮流" src="http://www.5844.cn/upload/fuSi201106/2011112015215869.jpg" /></a></p>
-<p style="TEXT-ALIGN: center">15款冬季美包 追逐时尚潮流</p>
-<center></center><br />
-<br />
-<br>
-              
-                            <center>
-                <div class="gotoPage" style="margin-right:5px; width:600px; height:auto;"><ul><li class="current">1</li><li><A HREF=/newShow_9629_2.htm>2</A></li> <li><A HREF=/newShow_9629_3.htm>3</A></li> <li><A HREF=/newShow_9629_4.htm>4</A></li> <li><A HREF=/newShow_9629_5.htm>5</A></li> </ul></div>
-              </center>
-               <br />
-			   <br /></td>
+    <td>
+    <div>
+    {dede:field.body/}
+      {dede:field.vote/}
+      (责任编辑：{dede:adminname/})
+     </div>
+    <br />
+    <div>
+    	 {dede:pagebreak/}
+    </div>
+    </td>
   </tr>
 </table>
 
-              
-
-上一篇：<a href="newShow_9630.htm">舒缓敏感肌 抵御“沙漠”风沙飞扬</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-下一篇：<a href="newShow_9628.htm">男人衬衫与领带的搭配技巧</a>
+{dede:prenext get='pre'/}{dede:prenext get='next'/}
 <br />
 </div>
 </div>
