--- a/Soft/dedecms/taobao1/head.htm
+++ b/Soft/dedecms/taobao1/head.htm
@@ -1,5 +1,5 @@
 ﻿<div id="top">
-  <div id="logo"><img src="templets/taobao1/images/logo.jpg" /></div>
+  <div id="logo"><img src="/templets/taobao1/images/logo.jpg" /></div>
   <div id="toplink">
 <a href="http://www.chihuotianxia.com" target="_blank">吃货天下</a>|
 <a href="http://www.mengmeng8.com" target="_blank">萌萌吧</a></div>
@@ -16,15 +16,15 @@
 
 <div id="topsearch">
 <div id="topsearch1">新闻搜索：</div>
-<form action="plus/search.php" method="get">
+<form action="/plus/search.php" method="get">
 <input type="hidden" id="searchtype" value="titlekeyword" />
 <div class="topsearch2"><input name="keyword" type="text" style="width:300px; border:0px; height:22px" /></div>
 <div class="topsearch2"><input type="submit" id="btnsearch" value="搜索" /></div>
 </form>
 <div id="topsearch3">热搜：<a href="plus/search.php?keyword=春季搭配" target="_blank">春季搭配</a> 
-<a href="plus/search.php?keyword=牛仔裤" target="_blank">牛仔裤</a> 
-<a href="plus/search.php?keyword=画眼妆" target="_blank">画眼妆</a> 
-<a href="plus/search.php?keyword=明星搭配" target="_blank">明星搭配</a>
-<a href="plus/search.php?keyword=凉鞋" target="_blank">凉鞋</a>
+<a href="/plus/search.php?keyword=牛仔裤" target="_blank">牛仔裤</a> 
+<a href="/plus/search.php?keyword=画眼妆" target="_blank">画眼妆</a> 
+<a href="/plus/search.php?keyword=明星搭配" target="_blank">明星搭配</a>
+<a href="/plus/search.php?keyword=凉鞋" target="_blank">凉鞋</a>
 <a href="plus/search.php?keyword=泳装" target="_blank">泳装</a></div>
 </div>
