--- a/Soft/dedecms/taobao1/index.htm
+++ b/Soft/dedecms/taobao1/index.htm
@@ -5,8 +5,8 @@
 <title>{dede:global.cfg_webname/}</title>
 <meta name="description" content="{dede:global.cfg_description/}" />
 <meta name="keywords" content="{dede:global.cfg_keywords/}" />
-<link href="templets/taobao1/images/css.css" rel="stylesheet" type="text/css" />
-<SCRIPT language=javascript src="js/changimages.js"></SCRIPT>
+<link href="/templets/taobao1/images/css.css" rel="stylesheet" type="text/css" />
+<SCRIPT language=javascript src="/js/changimages.js"></SCRIPT>
 </head>
 <body>
 {dede:include filename="head.htm"/}
