--- a/Soft/dedecms/taobao1/article_article.htm
+++ b/Soft/dedecms/taobao1/article_article.htm
@@ -73,7 +73,7 @@ alimama_height=90;
 <div class="newshowlj"><b>您当前的位置：</b> {dede:field name='position'/} </div>
 <div class="newshowbody">
 <h2>{dede:field.title/}</h2>
-<span>日期：{dede:field.pubdate function="MyDate('Y-m-d H:i',@me)"/} 作者：{dede:field.source/} 来源：{dede:field.writer/} 人气：<script src="{dede:field name='phpurl'/}/count.php?view=yes&aid={dede:field name='id'/}&mid={dede:field name='mid'/}" type='text/javascript' language="javascript"></script></span>
+<span>日期：{dede:field.pubdate function="MyDate('Y-m-d H:i',@me)"/} &nbsp; 作者：{dede:field.source/} &nbsp; 来源：{dede:field.writer/} &nbsp; 人气：<script src="{dede:field name='phpurl'/}/count.php?view=yes&aid={dede:field name='id'/}&mid={dede:field name='mid'/}" type='text/javascript' language="javascript"></script></span>
 <div class="showbody">
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tr>
