--- a/Soft/dedecms/taobao1/head.htm
+++ b/Soft/dedecms/taobao1/head.htm
@@ -4,7 +4,7 @@
 <a href="http://www.chihuotianxia.com" target="_blank">吃货天下</a>|
 <a href="http://www.mengmeng8.com" target="_blank">萌萌吧</a></div>
  <ul class="topmenu">
-  <li class="topmenu1"><a href="index.html">首页</a></li>
+  <li class="topmenu1"><a href="/index.html">首页</a></li>
   <li class="topmenu2"><a href="http://www.go12go.com" target="_blank">导购网</a></li>
   <li class="topmenu2"><a href="http://www.niubibang.com" target="_blank">男人邦</a></li>
   <li class="topmenu2"><a href="http://www.hi859.com" target="_blank">房产</a></li>
@@ -21,7 +21,7 @@
 <div class="topsearch2"><input name="keyword" type="text" style="width:300px; border:0px; height:22px" /></div>
 <div class="topsearch2"><input type="submit" id="btnsearch" value="搜索" /></div>
 </form>
-<div id="topsearch3">热搜：<a href="plus/search.php?keyword=春季搭配" target="_blank">春季搭配</a> 
+<div id="topsearch3">热搜：<a href="/plus/search.php?keyword=春季搭配" target="_blank">春季搭配</a> 
 <a href="/plus/search.php?keyword=牛仔裤" target="_blank">牛仔裤</a> 
 <a href="/plus/search.php?keyword=画眼妆" target="_blank">画眼妆</a> 
 <a href="/plus/search.php?keyword=明星搭配" target="_blank">明星搭配</a>
