--- a/top/DataAnalysis/YXBangTui.Web/qubie.html
+++ b/top/DataAnalysis/YXBangTui.Web/qubie.html
@@ -13,7 +13,7 @@
 <div class="navigation" style="height:600px;">
 
 
-  <div class="crumbs"><a href="javascript:;" class="nolink">特推广</a> 版本区别 </div>
+  <div class="crumbs"><a href="javascript:;" class="nolink">特推广</a> 优质广告收费说明 </div>
   <div class="absright">
     <ul>
       <li>
