--- a/top/DataAnalysis/YXBangTui.Web/vip2.html
+++ b/top/DataAnalysis/YXBangTui.Web/vip2.html
@@ -13,7 +13,7 @@
 <div class="navigation" style="height:600px;">
 
 
-  <div class="crumbs"><a href="javascript:;" class="nolink">特推广</a> VIP推广如何收费 </div>
+  <div class="crumbs"><a href="javascript:;" class="nolink">特推广</a> VIP广告说明 </div>
   <div class="absright">
     <ul>
       <li>
