--- a/Soft/dedecms/taobao1/head.htm
+++ b/Soft/dedecms/taobao1/head.htm
@@ -28,3 +28,48 @@
 <a href="/plus/search.php?keyword=凉鞋" target="_blank">凉鞋</a>
 <a href="plus/search.php?keyword=泳装" target="_blank">泳装</a></div>
 </div>
+
+<div id="topclass">
+<div id="topclass1">
+<h4><a href="newsClass_1.htm" >服饰频道</a></h4>
+<ul>
+<li ><span><a href="newsClassZ_1.htm" >服饰搭配</a></span></li>
+<li ><a href="newsClassZ_2.htm" >明星搭配</a></li>
+<li ><span><a href="newsClassZ_4.htm" >韩日服饰</a></span></li>
+<li style="border:0px;"><a href="newsClassZ_11.htm" >欧美服饰</a></li>
+<li ><a href="newsClassZ_5.htm" >街头随拍</a></li>
+<li ><span><a href="newsClassZ_6.htm" >内衣达人</a></span></li>
+<li ><a href="newsClassZ_12.htm" >潮男服饰</a></li>
+<li style="border:0px;"><span><a href="newsClassZ_8.htm" >鞋包流行</a></span></li>
+</ul>
+</div>
+<div id="topclass2">
+<h4><a href="newsClass_2.htm" >美容美发</a></h4>
+<ul>
+<li ><a href="newsClassZ_9.htm" >肌肤保养</a></li>
+<li ><span><a href="newsClassZ_15.htm" >前沿美妆</a></span></li>
+<li style="border:0px;"><a href="newsClassZ_14.htm" >化妆技巧</a></li>
+<li ><span><a href="newsClassZ_7.htm" >发型潮流</a></span></li>
+<li ><a href="newsClassZ_16.htm" >美发保养</a></li>
+<li style="border:0px;"><span><a href="newsClassZ_17.htm" >香水物语</a></span></li>
+</ul>
+</div>
+<div id="topclass3">
+<h4><a href="newsClass_3.htm" >美体塑身</a></h4>
+<ul>
+<li ><a href="newsClassZ_10.htm" >减肥瘦身</a></li>
+<li style="border:0px;"><span><a href="newsClassZ_18.htm" >享瘦美食</a></span></li>
+<li ><span><a href="newsClassZ_19.htm" >塑身有道</a></span></li>
+<li style="border:0px;"><a href="newsClassZ_29.htm" >明星美体</a></li>
+</ul>
+</div>
+<div id="topclass4">
+<h4><a href="newsClass_4.htm" >时尚频道</a></h4>
+<ul>
+<li ><span><a href="newsClassZ_21.htm" >娱乐资讯</a></span></li>
+<li style="border:0px;"><a href="newsClassZ_20.htm" >焦点新闻</a></li>
+<li ><a href="newsClassZ_23.htm" >情感隐私</a></li>
+<li style="border:0px;"><span><a href="newsClassZ_3.htm" >非主流</a></span></li>
+</ul>
+</div>
+</div>
