--- a/Soft/dedecms/taobao1/list_article.htm
+++ b/Soft/dedecms/taobao1/list_article.htm
@@ -70,7 +70,7 @@ alimama_height=190;
 <div class="classzbody">
 <ul>
 {dede:list pagesize='10'}
-<li><span>● [<b>[field:typelink/]</b>] <a href="[field:arcurl/]" class="title">[field:title/]</a></span><font>[field:pubdate function="GetDateTimeMK(@me)"/] </font></li>
+<li><span>● <a href="[field:arcurl/]" class="title">[field:title/]</a></span></li>
 {/dede:list}
 </ul>
 <div class="gotoPage">{dede:pagelist listitem="info,index,end,pre,next,pageno,option" listsize="5"/}</div>
