--- a/Soft/dedecms/taobao1/list_article.htm
+++ b/Soft/dedecms/taobao1/list_article.htm
@@ -73,7 +73,8 @@ alimama_height=190;
 <li><span>● <a href="[field:arcurl/]" class="title">[field:title/]</a></span></li>
 {/dede:list}
 </ul>
-<div class="gotoPage">{dede:pagelist listitem="info,index,end,pre,next,pageno,option" listsize="5"/}</div>
+<br clear="all" />
+<div class="gotoPage">{dede:pagelist listitem="info,index,end,pre,next,pageno,option" listsize="10"/}</div>
 </div>
 </div>
 <div class="indadc"><script type="text/javascript">
