--- a/Soft/dedecms/taobao1/list_article.htm
+++ b/Soft/dedecms/taobao1/list_article.htm
@@ -70,7 +70,7 @@ alimama_height=190;
 <div class="classzbody">
 <ul>
 {dede:list pagesize='10'}
-<li><span>● <a href="[field:arcurl/]" class="title">[field:title/]</a></span></li>
+<li><span>● <a href="[field:arcurl/]" class="title">[field:title/]</a></span><font>[field:pubdate function="GetDateTimeMK(@me)"/] </font></li>
 {/dede:list}
 </ul>
 <br clear="all" />
