--- a/Soft/dedecms/taobao1/head.htm
+++ b/Soft/dedecms/taobao1/head.htm
@@ -30,19 +30,22 @@
 </div>
 
 <div id="topclass">
+
+{dede:channel type='top' row='4'}
 <div id="topclass1">
-<h4><a href="newsClass_1.htm" >服饰频道</a></h4>
+<h4><a href='[field:typeurl/]'><span>[field:typename/]</span></a></h4>
 <ul>
+
 <li ><span><a href="newsClassZ_1.htm" >服饰搭配</a></span></li>
 <li ><a href="newsClassZ_2.htm" >明星搭配</a></li>
 <li ><span><a href="newsClassZ_4.htm" >韩日服饰</a></span></li>
 <li style="border:0px;"><a href="newsClassZ_11.htm" >欧美服饰</a></li>
-<li ><a href="newsClassZ_5.htm" >街头随拍</a></li>
-<li ><span><a href="newsClassZ_6.htm" >内衣达人</a></span></li>
-<li ><a href="newsClassZ_12.htm" >潮男服饰</a></li>
-<li style="border:0px;"><span><a href="newsClassZ_8.htm" >鞋包流行</a></span></li>
+
 </ul>
 </div>
+{/dede:channel}
+
+<!--
 <div id="topclass2">
 <h4><a href="newsClass_2.htm" >美容美发</a></h4>
 <ul>
@@ -72,4 +75,5 @@
 <li style="border:0px;"><span><a href="newsClassZ_3.htm" >非主流</a></span></li>
 </ul>
 </div>
+-->
 </div>
