--- a/Soft/dedecms/taobao1/head.htm
+++ b/Soft/dedecms/taobao1/head.htm
@@ -32,65 +32,20 @@
 <div id="topclass">
 
 
-{dede:channel type='top' row='1' limit='0,1'}
-<div id="topclass1">
-<h4><a href='[field:typeurl/]'><span>[field:typename/]</span></a></h4>
+{dede:channelartlist type='top' row='4'}
+<div id="topclass4">
+<h4><a href='[dede:field:typeurl/]'><span>[dede:field:typename/]</span></a></h4>
 <ul>
 
-{dede:channel type='top'}
+{dede:channel type='son' noself='true'}
 <li ><a href='[field:typeurl/]'><span>[field:typename/]</span></a></li>
 {/dede:channel}
 
 </ul>
 </div>
-{/dede:channel}
+{/dede:channelartlist}
 
 
-<div id="topclass2">
-{dede:channel type='top' row='1' limit='1,1'}
-<h4><a href='[field:typeurl/]'><span>[field:typename/]</span></a></h4>
-{/dede:channel}
-<ul>
-
-<li ><span><a href="newsClassZ_1.htm" >服饰搭配</a></span></li>
-<li ><a href="newsClassZ_2.htm" >明星搭配</a></li>
-<li ><span><a href="newsClassZ_4.htm" >韩日服饰</a></span></li>
-<li style="border:0px;"><a href="newsClassZ_11.htm" >欧美服饰</a></li>
-<li ><span><a href="newsClassZ_4.htm" >韩日服饰</a></span></li>
-<li style="border:0px;"><a href="newsClassZ_11.htm" >欧美服饰</a></li>
-
-</ul>
-</div>
-
-
-<div id="topclass3">
-{dede:channel type='top' row='1' limit='2,1'}
-<h4><a href='[field:typeurl/]'><span>[field:typename/]</span></a></h4>
-{/dede:channel}
-<ul>
-
-<li ><span><a href="newsClassZ_1.htm" >服饰搭配</a></span></li>
-<li ><a href="newsClassZ_2.htm" >明星搭配</a></li>
-<li ><span><a href="newsClassZ_4.htm" >韩日服饰</a></span></li>
-<li style="border:0px;"><a href="newsClassZ_11.htm" >欧美服饰</a></li>
-
-</ul>
-</div>
-
-
-<div id="topclass4">
-{dede:channel type='top' row='1' limit='3,1'}
-<h4><a href='[field:typeurl/]'><span>[field:typename/]</span></a></h4>
-{/dede:channel}
-<ul>
-
-<li ><span><a href="newsClassZ_1.htm" >服饰搭配</a></span></li>
-<li ><a href="newsClassZ_2.htm" >明星搭配</a></li>
-<li ><span><a href="newsClassZ_4.htm" >韩日服饰</a></span></li>
-<li style="border:0px;"><a href="newsClassZ_11.htm" >欧美服饰</a></li>
-
-</ul>
-</div>
 
 
 <!--
