--- a/Soft/dedecms/taobao1/head.htm
+++ b/Soft/dedecms/taobao1/head.htm
@@ -32,8 +32,8 @@
 <div id="topclass">
 
 
-{dede:channelartlist type='top' row='4'}
-<div id="topclass4">
+{dede:channelartlist type='top' row='4' limit='0,1'}
+<div id="topclass1">
 <h4><a href='[dede:field:typeurl/]'><span>[dede:field:typename/]</span></a></h4>
 <ul>
 
@@ -46,6 +46,47 @@
 {/dede:channelartlist}
 
 
+{dede:channelartlist type='top' row='4' limit='1,2'}
+<div id="topclass2">
+<h4><a href='[dede:field:typeurl/]'><span>[dede:field:typename/]</span></a></h4>
+<ul>
+
+{dede:channel type='son' noself='true'}
+<li ><a href='[field:typeurl/]'><span>[field:typename/]</span></a></li>
+{/dede:channel}
+
+</ul>
+</div>
+{/dede:channelartlist}
+
+
+
+{dede:channelartlist type='top' row='4' limit='2,3'}
+<div id="topclass3">
+<h4><a href='[dede:field:typeurl/]'><span>[dede:field:typename/]</span></a></h4>
+<ul>
+
+{dede:channel type='son' noself='true'}
+<li ><a href='[field:typeurl/]'><span>[field:typename/]</span></a></li>
+{/dede:channel}
+
+</ul>
+</div>
+{/dede:channelartlist}
+
+
+{dede:channelartlist type='top' row='4' limit='3,4'}
+<div id="topclass4">
+<h4><a href='[dede:field:typeurl/]'><span>[dede:field:typename/]</span></a></h4>
+<ul>
+
+{dede:channel type='son' noself='true'}
+<li ><a href='[field:typeurl/]'><span>[field:typename/]</span></a></li>
+{/dede:channel}
+
+</ul>
+</div>
+{/dede:channelartlist}
 
 
 <!--
