--- a/Soft/dedecms/taobao1/head.htm
+++ b/Soft/dedecms/taobao1/head.htm
@@ -34,7 +34,7 @@
 
 {dede:channelartlist type='top' row='4' limit='0,1'}
 <div id="topclass1">
-<h4><a href='[dede:field:typeurl/]'><span>[dede:field:typename/]</span></a></h4>
+<h4><a href='[field:typeurl/]'><span>[field:typename/]</span></a></h4>
 <ul>
 
 {dede:channel type='son' noself='true'}
@@ -48,7 +48,7 @@
 
 {dede:channelartlist type='top' row='4' limit='1,2'}
 <div id="topclass2">
-<h4><a href='[dede:field:typeurl/]'><span>[dede:field:typename/]</span></a></h4>
+<h4><a href='[field:typeurl/]'><span>[typename/]</span></a></h4>
 <ul>
 
 {dede:channel type='son' noself='true'}
@@ -63,7 +63,7 @@
 
 {dede:channelartlist type='top' row='4' limit='2,3'}
 <div id="topclass3">
-<h4><a href='[dede:field:typeurl/]'><span>[dede:field:typename/]</span></a></h4>
+<h4><a href='[field:typeurl/]'><span>[field:typename/]</span></a></h4>
 <ul>
 
 {dede:channel type='son' noself='true'}
@@ -77,7 +77,7 @@
 
 {dede:channelartlist type='top' row='4' limit='3,4'}
 <div id="topclass4">
-<h4><a href='[dede:field:typeurl/]'><span>[dede:field:typename/]</span></a></h4>
+<h4><a href='[field:typeurl/]'><span>[field:typename/]</span></a></h4>
 <ul>
 
 {dede:channel type='son' noself='true'}
