--- a/Soft/dedecms/taobao1/head.htm
+++ b/Soft/dedecms/taobao1/head.htm
@@ -32,7 +32,7 @@
 <div id="topclass">
 
 
-{dede:channelartlist type='top' row='4' limit='0,1'}
+{dede:channelartlist type='top' limit='0,1'}
 <div id="topclass1">
 <h4><a href='[field:typeurl/]'><span>[field:typename/]</span></a></h4>
 <ul>
@@ -46,7 +46,7 @@
 {/dede:channelartlist}
 
 
-{dede:channelartlist type='top' row='4' limit='1,2'}
+{dede:channelartlist type='top' limit='1,1'}
 <div id="topclass2">
 <h4><a href='[field:typeurl/]'><span>[typename/]</span></a></h4>
 <ul>
@@ -61,7 +61,7 @@
 
 
 
-{dede:channelartlist type='top' row='4' limit='2,3'}
+{dede:channelartlist type='top' limit='2,1'}
 <div id="topclass3">
 <h4><a href='[field:typeurl/]'><span>[field:typename/]</span></a></h4>
 <ul>
@@ -75,7 +75,7 @@
 {/dede:channelartlist}
 
 
-{dede:channelartlist type='top' row='4' limit='3,4'}
+{dede:channelartlist type='top' limit='3,1'}
 <div id="topclass4">
 <h4><a href='[field:typeurl/]'><span>[field:typename/]</span></a></h4>
 <ul>
